--- a/src/styles/element-ui.less
+++ b/src/styles/element-ui.less
@@ -1,84 +1,39 @@
 // cover some element-ui styles
 
-.el-breadcrumb__inner,
-.el-breadcrumb__inner a {
-  font-weight: 400 !important;
+.el-button, .el-input__inner {
+  height: 32px;
+  line-height: 32px;
+}
+.el-input__inner {
+  height: 32px;
+  line-height: 32px;
+}
+.el-button {
+  padding: 0 20px;
+}
+.el-button.is-round {
+  padding: 0 20px;
 }
 
-.el-upload {
-  input[type="file"] {
-    display: none !important;
-  }
+.el-table td, .el-table th {
+  text-align: center;
 }
 
-.el-upload__input {
-  display: none;
+.el-table td, .el-table th {
+  padding: 8px 0;
 }
 
-.cell {
-  .el-tag {
-    margin-right: 0px;
-  }
+.el-form-item__label {
+  line-height: 40px;
 }
 
-.small-padding {
-  .cell {
-    padding-left: 5px;
-    padding-right: 5px;
-  }
+.el-submenu__icon-arrow {
+  color: #909399 !important;
 }
 
-.fixed-width {
-  .el-button--mini {
-    padding: 7px 10px;
-    width: 60px;
-  }
+.el-menu-item i {
+  color: #dee4eb;
 }
-
-.status-col {
-  .cell {
-    padding: 0 10px;
-    text-align: center;
-
-    .el-tag {
-      margin-right: 0px;
-    }
-  }
-}
-
-// to fixed https://github.com/ElemeFE/element/issues/2461
-.el-dialog {
-  transform: none;
-  left: 0;
-  position: relative;
-  margin: 0 auto;
-}
-
-// refine element ui upload
-.upload-container {
-  .el-upload {
-    width: 100%;
-
-    .el-upload-dragger {
-      width: 100%;
-      height: 200px;
-    }
-  }
-}
-
-// dropdown
-.el-dropdown-menu {
-  a {
-    display: block
-  }
-}
-
-// fix date-picker ui bug in filter-item
-.el-range-editor.el-input__inner {
-  display: inline-flex !important;
-}
-
-// to fix el-date-picker css style
-.el-range-separator {
-  box-sizing: content-box;
+.el-menu-item.is-active i {
+  color: #409EFF;
 }
